# last_five_operations

./: .coverage  .gitignore  README.md  pyproject.toml
main/: main.py  utils.py
tests/: file_for_test.py  test_utils.py
