[tool.poetry]
name = "last-five-operations"
version = "0.1.0"
description = ""
authors = ["gramm23 <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "last_five_operations"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
